--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>testing testing</h1>
+    <header>
+        <h1 class = 'name'>Nicholas Wong</h1>
+        <ul class = "navbar">
+            <li>About</li>
+            <li>Projects</li>
+            <li>Contact</li>
+            <li><i class="fab fa-linkedin"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+        </ul>
+
+    </header>
+    <section class="hero">
+        <img src="" alt="">
+        <p></p>
+    </section>
 </body>
 </html>
