Hero Image Section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
 
     </header>
     <section class="hero">
-        <img src="" alt="">
-        <p></p>
+        <div>
+            <img src="IMG_2457.JPG" alt="">
+            <h1>Nicholas Wong</h1>
+            <p>
+                Nicholas Wong is a UI/UX design student aspiring to be a UI/Product Designer who wants to connect with people via the designs he invisions and creates. 
+                He wants to be able to bring his designs into a personal approach which can correlate to people with different backgrounds. 
+                When Nicholas is not working on design you can find him admiring fashion, building model kits, practicing grafitti style, and gaming.
+
+                Nicholas is currently studying UI/UX design under UC Berkley Extension working towards his certificate by creating projects such as mobile app design and web redesigns as a product designer.
+            </p>
+            <button>Click Me</button>
+        </div>
     </section>
 </body>
 </html>
